--- a/eureka-server 2/pom.xml
+++ b/eureka-server 2/pom.xml
@@ -12,6 +12,7 @@
 	<artifactId>eureka-server</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>eureka-server</name>
+	<packaging>jar</packaging>
 	<description>eureka servier for task management</description>
 	<properties>
 		<java.version>17</java.version>
