--- a/task-management-service/src/main/resources/application-docker.yml
+++ b/task-management-service/src/main/resources/application-docker.yml
@@ -1,16 +1,16 @@
 user:
-  url: http://localhost:5001
+  url: http://user:5001
 submission:
-  url: http://localhost:5003
+  url: http://submission:5003
 management:
-  url: http://localhost:5002
+  url: http://management:5002
 
 server:
-  port: 5003
+  port: 5002
 
 spring:
   application:
-    name: SUBMISSION-SERVICE
+    name: TASK-SERVICE
   datasource:
     url: jdbc:mysql://taskmanager.c5666k00u2dc.ap-south-1.rds.amazonaws.com:3306/taskmanager
     username: admin
@@ -29,4 +29,6 @@ eureka:
     fetchRegistry: true
     registerWithEureka: true
     serviceUrl:
-      defaultZone: http://localhost:8070/eureka/
+      defaultZone: http://eureka-reg:8070/eureka/
+
+
